@@ -8,33 +8,45 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.filter.CorsFilter;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 public class CorsConfig {
 
-    @Value("${app.url.frontend}")
-    private String frontendUrl;
+    @Value("${app.cors.allowed-origins:*}")
+    private String allowedOrigins;
+
+    @Value("${app.cors.allow-credentials:false}")
+    private boolean allowCredentials;
 
     @Bean
     public CorsFilter corsFilter() {
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowCredentials(true);
-        config.setAllowedOrigins(Arrays.asList(frontendUrl));
-        config.setAllowedHeaders(Arrays.asList(
-                "Origin",
-                "Content-Type",
-                "Accept",
-                "Authorization",
-                "X-User-Id",
-                "X-User-Role"
-        ));
+
+        config.setAllowCredentials(allowCredentials);
+
+        if ("*".equals(allowedOrigins)) {
+            config.setAllowedOriginPatterns(List.of("*"));
+        } else {
+            List<String> origins = Arrays.asList(allowedOrigins.split(","));
+
+            if (origins.stream().anyMatch(o -> o.contains("*"))) {
+                config.setAllowedOriginPatterns(origins);
+            } else {
+                config.setAllowedOrigins(origins);
+            }
+        }
+
+        config.setAllowedHeaders(Arrays.asList("*"));
+
         config.setAllowedMethods(Arrays.asList(
-                "GET",
-                "POST",
-                "PUT",
-                "DELETE",
-                "OPTIONS"
+                "GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH", "HEAD"
         ));
+
+        config.setExposedHeaders(Arrays.asList(
+                "Authorization", "Content-Type", "X-User-Id", "X-User-Role"
+        ));
+
         config.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
